--- a/text/guaranteeing.tex
+++ b/text/guaranteeing.tex
@@ -19,7 +19,7 @@ For any guarantor of index $v$ assigned to core $c$ and a work-package $p$, we d
   r = \computereport(p, c)
 \end{equation}
 
-Such guarantors may safely create and distribute the payload $(s, v)$. The component $s$ may be created according to equation \ref{eq:guarantorsig}; specifically it is a signature using the validator's registered Ed25519 key on a payload $l$:
+Such guarantors may safely create and distribute the payload $\tup{s, v}$. The component $s$ may be created according to equation \ref{eq:guarantorsig}; specifically it is a signature using the validator's registered Ed25519 key on a payload $l$:
 \begin{equation}
   l = \blake(\encode{c, r)}
 \end{equation}
