--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -208,8 +208,8 @@ We also define $\guarantorassignmentsunderlastrotation$, which is equivalent to 
   \label{eq:priorassignments}
   \begin{aligned}
     \using \tup{e, \mathbf{k}} &= \begin{cases}
-      (\entropy'_2, \activeset') &\when \displaystyle\ffrac{\thetime' - \mathsf{R}}{\epochlen} = \ffrac{\thetime'}{\epochlen}\\
-      (\entropy'_3, \previousset') &\otherwise
+      \tup{\entropy'_2, \activeset'} &\when \displaystyle\ffrac{\thetime' - \mathsf{R}}{\epochlen} = \ffrac{\thetime'}{\epochlen}\\
+      \tup{\entropy'_3, \previousset'} &\otherwise
     \end{cases} \\
     \guarantorassignmentsunderlastrotation &\equiv \tup{
       P(e, \thetime' - \mathsf{R}),
