--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -69,7 +69,7 @@ We also define a convenient discriminator operator $\maybe{x}$ specifically for 
 \begin{align}
   \maybe{x} \equiv \begin{cases}
     0 &\when x = \none \\
-    (1, x) &\otherwise
+    \tup{1, x} &\otherwise
   \end{cases}
 \end{align}
 
