--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -37,7 +37,7 @@ The six validator statistics we track are:
 The objective statistics are updated in line with their description, formally:
 \begin{align}
   \using e =\; &\ffrac{\thetime}{\epochlen} \ ,\quad e' = \ffrac{\thetime'}{\epochlen}\\
-  \!(\mathbf{a}, \valstatsprevious') \equiv\;&\begin{cases}
+  \!\tup{\mathbf{a}, \valstatsprevious'} \equiv\;&\begin{cases}
       \tup{\valstatsaccumulator, \valstatsprevious} &\when e' = e \\
       \tup{\sq{\tup{0, \dots, \sq{0, \dots}}, \dots}, \valstatsaccumulator}\!\!\!\! &\otherwise
   \end{cases}\!\!\!\!\\
