--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -52,7 +52,7 @@ We define the queue-editing function $E$, which is essentially a mutator functio
       \tup{w, \mathbf{d} \setminus \mathbf{x}}
     }{
       \begin{aligned}
-        &(w, \mathbf{d}) \orderedin \mathbf{r} ,\\
+        &\tup{w, \mathbf{d}} \orderedin \mathbf{r} ,\\
         &(w_\wr¬avspec)_\as¬packagehash \not\in \mathbf{x}
       \end{aligned}
     }}
@@ -66,7 +66,7 @@ We further define the accumulation priority queue function $Q$, which provides t
     &\mathbf{r} \mapsto \begin{cases}
       [] &\when \mathbf{g} = [] \\
       \mathbf{g} \concat Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
-      \multicolumn{2}{l}{\,\where \mathbf{g} = \sq{\build{w}{(w, \emset) \orderedin \mathbf{r}}}}
+      \multicolumn{2}{l}{\,\where \mathbf{g} = \sq{\build{w}{\tup{w, \emset} \orderedin \mathbf{r}}}}
     \end{cases}
   }
 \end{equation}
@@ -135,15 +135,15 @@ We define the outer accumulation function $\accseq$ which transforms a gas-limit
 \begin{equation}
   \accseq\colon\abracegroup{
     &\tuple{\gas, \sequence{\workreport}, \partialstate, \dict{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \servouts, \gasused} \\
-    &(g, \mathbf{w}, \mathbf{o}, \mathbf{f}) \!\mapsto\! \begin{cases}
-      (0, \mathbf{o}, \sq{}, \emset, \sq{}) &
+    &\tup{g, \mathbf{w}, \mathbf{o}, \mathbf{f}} \!\mapsto\! \begin{cases}
+      \tup{0, \mathbf{o}, \sq{}, \emset, \sq{}} &
         \when i = 0 \\
-      (i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u})\!\!\!\! &
+      \tup{i + j, \mathbf{o}', \mathbf{t}^* \!\!\concat \mathbf{t}, \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u}}\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
     \end{cases} \\
     &\quad\where i = \max(\Nmax{\len{\mathbf{w}} + 1}): \sum_{w \in \mathbf{w}\sub{\dots i}}\sum_{r \in w_\wr¬digests}(r_\wd¬gaslimit) \le g \\
-    &\quad\also (\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*) = \accpar(\mathbf{o}, \mathbf{w}\sub{\dots i}, \mathbf{f}) \\
-    &\quad\also (j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}) = \accseq(g - \!\!\!\!\sum_{\tup{s, u} \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}\sub{i\dots}, \mathbf{o}^*, \emset)
+    &\quad\also \tup{\mathbf{o}^*, \mathbf{t}^*, \mathbf{b}^*, \mathbf{u}^*} = \accpar(\mathbf{o}, \mathbf{w}\sub{\dots i}, \mathbf{f}) \\
+    &\quad\also \tup{j, \mathbf{o}', \mathbf{t}, \mathbf{b}, \mathbf{u}} = \accseq(g - \!\!\!\!\sum_{\tup{s, u} \in \mathbf{u}^*}\!\!\!\!u, \mathbf{w}\sub{i\dots}, \mathbf{o}^*, \emset)
   }
 \end{equation}
 
@@ -229,7 +229,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
 \begin{equation}
   \fnprovide\colon\abracegroup{
     &\tuple{\dict{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}} \to \dict{\serviceid}{\serviceaccount} \\
-    &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
+    &\tup{\mathbf{d}, \mathbf{p}} \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
       s \in \keys{\mathbf{d}},\;
       \mathbf{d}\subb{s}_\sa¬requests\subb{\blake(\mathbf{i}), \len{\mathbf{i}}} = \sq{}:\\
@@ -268,7 +268,7 @@ The single-service accumulation function, $\accone$, transforms an initial state
           \isa{&\ao¬provisions&}{\protoset{\tuple{\serviceid, \blob}}}
         \end{alignedat}
       } \\
-      (\mathbf{o}, \mathbf{w}, \mathbf{f}, s) &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
+      \tup{\mathbf{o}, \mathbf{w}, \mathbf{f}, s} &\mapsto \Psi_A(\mathbf{o}, \thetime', s, g, \mathbf{i})
     \end{aligned} \\
     &\text{where:} \\
     &\ \begin{aligned}
