--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -39,12 +39,12 @@ The original data may be reconstructed with any 342 of the 1,023 resultant items
   \ecrecover_{k \in \N}\colon\abracegroup{
     \protoset{\tuple{\bloboflen{2k}, \Nmax{1023}}}_{342} &\to \bloboflen{684k} \\
     \mathbf{c} &\mapsto \begin{cases}
-      \encode{\sq{\build{\mathbf{x}}{\tup{\mathbf{x}, i} \orderedin \sqorderby{i}{(\mathbf{x}, i) \in \mathbf{c}}}}} &\when \set{\build{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}} = \Nmax{342}\\
+      \encode{\sq{\build{\mathbf{x}}{\tup{\mathbf{x}, i} \orderedin \sqorderby{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}}}} &\when \set{\build{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}} = \Nmax{342}\\
       \join(\join^\#({}^\text{T}[
         \ecrecover(\set{\build{(\spl{2}(\mathbf{x})\sub{p}, i)}{\tup{\mathbf{x}, i} \in \mathbf{c}}})
       \mid p \in \Nmax{k}])) &\text{always}\\
     \end{cases}
-%      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose\sq{\build{\spl{2}(\mathbf{x})}{(\mathbf{x}, i) \orderedin \mathbf{c}}} ]
+%      [ \ecrecover(\mathbf{y}, i) \mid \mathbf{y} \orderedin \transpose\sq{\build{\spl{2}(\mathbf{x})}{\tup{\mathbf{x}, i} \orderedin \mathbf{c}}} ]
   }
 \end{equation}
 
@@ -106,7 +106,7 @@ Instead of using the standard basis $\set{1, \authpool, \authpool^2, \dots, \aut
 
 Every message word $m\sub{i}=m_{i, 15} \ldots m\sub{i, 0}$ consists of 16 bits. As such it could be regarded as binary vector of length 16:
 \begin{equation}
-m\sub{i} = (m\sub{i, 0} \ldots m\sub{i, 15})
+m\sub{i} = \tup{m\sub{i, 0} \ldots m\sub{i, 15}}
 \end{equation}
 
 Where $m_{i, 0}$ is the least significant bit of message word $m\sub{i}$. Accordingly we consider the field element $\tilde{m}\sub{i} = \sum^{15}_{j = 0} m\sub{i, j} v\sub{j}$ to represent that message word.
